changed color of quote boxes, fixed spacing/centering errors with header and footer, added pics

--- a/bemain/css/be.css
+++ b/bemain/css/be.css
@@ -17,7 +17,7 @@ body {
 ul.no-list {
   list-style-type: none;
   -webkit-padding-start: 0;
-  -webkit-margin-before: ;
+  -webkit-margin-before: 0;
   -webkit-margin-after: 0;
   text-align: center;
   justify-content: center;
@@ -55,14 +55,19 @@ li.our-initiatives{
   margin: 0 auto;
   margin-top: 1.5em;
 }
-#menubar ul li a {
+#menubar ul li {
   color: #214876;
-  text-decoration: none;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 0.7em;
   padding: 0 2em 0 1em;
 }
+
+#menubar ul li a {
+  text-decoration: none;
+  padding: .2em;
+  }
+
 #menubar ul li a:hover {
   background: #214876;
   color: white;
@@ -130,7 +135,7 @@ li.our-initiatives{
   position: absolute;
   bottom: 2.5em;
   left: 40%;
-  animation: slideRightBike 5s infinite forwards;
+  animation: slideRightBike 8s infinite forwards;
   animation-delay: 1s;
   overflow: hidden;
 }
@@ -139,7 +144,7 @@ li.our-initiatives{
   position: absolute;
   bottom: 2.5em;
   left: 70%;
-  animation: slideRightTruck 5s infinite forwards;
+  animation: slideRightTruck 8s infinite forwards;
   animation-delay: 1s;
   overflow: hidden;
 }
@@ -148,7 +153,7 @@ li.our-initiatives{
   position: absolute;
   bottom: 2.5em;
   left: 10%;
-  animation: slideRightScooter 5s infinite forwards;
+  animation: slideRightScooter 8s infinite forwards;
   animation-delay: 1s;
   overflow: hidden;
 }
@@ -283,6 +288,7 @@ li.our-initiatives{
 }
 #footer .footer-bg {
   width: 100%;
+  padding-top: 1em;
 }
 
 .what-sections {
@@ -320,7 +326,8 @@ li.our-initiatives{
 #testimonials-p {
   padding: 2em;
   text-align: left;
-  background-color: rgba(255,236,51,0.3);
+ /* background-color: rgba(255,236,51,0.3);*/
+  background-color: #A1DCF1;
 }
 
 .hero #hero-testimonials {
